TEST_PROGRAMS/INVALID/09/unclosed_blockcomment.go
/* Unclosed block comment
package main
